[package]
name = "heatchain"
version = "1.0.5"
authors = ["Hyultis <hyultis@gmail.com>"]
edition = "2021"


[features]
#default = []
#default = ["dynamicresolution","steam"]
default = ["dynamicresolution"]
steam = ["steamworks"]
dynamicresolution = []
debug = []

[dependencies]
HGE = { git="https://github.com/hyultis/Hyultis_Game_Engine", features = ["dynamicresolution","front_winit"]} # branch master
vulkano = "0.35.1"
vulkano-shaders = "0.35.0"
#base stuff
rand = "0.8.0"
ahash = "0.8.7"
dashmap = {version = "6.0.1", features = ["rayon"]}
rayon = "1.10.0"
parking_lot = "0.12.1"
anyhow = "1.0.79"
arc-swap = "1.6.0"
rand_chacha = "0.3.1"
rand_seeder = "0.3.0"
HArcMut = "1.1.1"#{ path = "../../rust/HArcMut" }
singletonThread = "1.1.0"
chrono = "0.4.31"
sys-locale = "0.3.1"
webbrowser = "1.0.1"
downcast-rs = "1.2.0"

#data
Hconfig = "1.1"
Htrace = "1.0.2"
base64 = "0.22.1"
rsa = { version = "0.9.6", features = ["sha2"]}
uuid = { version = "1.6.1" , features = [ "v4", "fast-rng", "macro-diagnostics"]}

#graphic
glyph_brush = "0.7.8"
glyph_brush_layout = "0.2.3"

#Publisher
steamworks = {optional = true,version = "0.11.0"}

#[target.'cfg(not(target_os = "android"))'.dependencies]

[target.'cfg(target_os = "android")'.dependencies]
ndk = { version = "0.9.0" }
#android-activity = { version = "0.6.0", features = ["game-activity"]}
jni = { version = "0.21.1", features = ["invocation"] }
winit = { version = "0.30.8", features = ["rwh_06", "android-game-activity"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["wincon"] }

[lib]
path= "src/main_android.rs"
name="heatchain"
crate-type=["cdylib"]

[[bin]]
path= "src/main_exec.rs"
name="heatchain"
#required-features = [ "steam" ]
